[gd_scene load_steps=4 format=3 uid="uid://cydrxsjn3ea45"]

[ext_resource type="FontFile" uid="uid://cladihgs0vay4" path="res://Fonts/alagard.ttf" id="1_8ygbk"]
[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_fvlys"]
[ext_resource type="PackedScene" uid="uid://bccrnd75ajlpb" path="res://Sprites/Menu.aseprite" id="2_fok0r"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fvlys")

[node name="Menu" parent="." instance=ExtResource("2_fok0r")]
position = Vector2(904, 496)
scale = Vector2(2, 2)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 1000.0
offset_top = 320.0
offset_right = 1488.0
offset_bottom = 832.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 0.654902, 0.992157, 1)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.392157, 0.243137, 0.501961, 1)
theme_override_fonts/font = ExtResource("1_8ygbk")
theme_override_font_sizes/font_size = 46
text = "Play"
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Controls" type="Button" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 0.654902, 0.992157, 1)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.392157, 0.243137, 0.501961, 1)
theme_override_fonts/font = ExtResource("1_8ygbk")
theme_override_font_sizes/font_size = 46
text = "Controls
"
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Fullscreen" type="Button" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 0.654902, 0.992157, 1)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.392157, 0.243137, 0.501961, 1)
theme_override_fonts/font = ExtResource("1_8ygbk")
theme_override_font_sizes/font_size = 46
text = "Fullscreen"
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 0.654902, 0.992157, 1)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.392157, 0.243137, 0.501961, 1)
theme_override_fonts/font = ExtResource("1_8ygbk")
theme_override_font_sizes/font_size = 46
text = "Exit"
icon_alignment = 1
vertical_icon_alignment = 0

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
